# mcp-assert

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  README.md  go.mod  go.sum  install.sh  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml  stats.yml
.saw-state/: active-impl  gate-cache.json
.saw-state/wave1/: branch-refs.json  prepare-result.json
assets/: bug-antvis.tape  demo.tape  download-stats.cache  downloads-badge.json
bun-plugin/: README.md  package.json
bun-plugin/src/: binary.ts  index.ts  runner.ts  suite.ts  types.ts
cmd/mcp-assert/: main.go
docs/: CONTEXT.md  ERROR_REFERENCE.md  architecture.md  audit-results.md  badge.md  ci-integration.md  cli.md  cold-start-audit-round2.md  cold-start-audit.md  distribution.md  dogfooding-findings.md  dogfooding-github-mcp.md  dogfooding-rmcp.md  dogfooding.md  examples.md  getting-started.md  index.md  roadmap.md  scorecard.md  test-runner-integrations.md  writing-assertions.md
docs/IMPL/: IMPL-dogfooding-friction-fixes.yaml  IMPL-protocol-surface-complete.yaml  IMPL-technical-depth-remaining.yaml
docs/audits/: awslabs-mcp-audit.md
examples/: mcp-go-README.md
examples/agent-lsp-go/: add_workspace_folder.yaml  apply_edit.yaml  build.yaml  call_hierarchy.yaml  change_impact.yaml  close_document.yaml  code_actions.yaml  code_actions_for_error.yaml  commit_session.yaml  commit_verify_file.yaml  completions.yaml  create_session.yaml  cross_repo_references.yaml  definition.yaml  destroy_session.yaml  detect_lsp_servers.yaml  diagnostics.yaml  diagnostics_after_error.yaml  did_change_watched_files.yaml  discard_session.yaml  evaluate_session.yaml  execute_command.yaml  format.yaml  format_range.yaml  get_server_capabilities.yaml  get_tests_for_file.yaml  go_to_declaration.yaml  go_to_symbol.yaml  highlights.yaml  hover.yaml  implementation.yaml  inlay_hints.yaml  list_workspace_folders.yaml  open_close_reopen.yaml  open_document.yaml  prepare_rename.yaml  references.yaml  remove_workspace_folder.yaml  rename.yaml  rename_verify_references.yaml  (+23 more)
examples/antvis-chart/: README.md  generate_area_chart.yaml  generate_bar_chart.yaml  generate_boxplot_chart.yaml  generate_column_chart.yaml  generate_district_map.yaml  generate_dual_axes_chart.yaml  generate_fishbone_diagram.yaml  generate_flow_diagram.yaml  generate_funnel_chart.yaml  generate_histogram_chart.yaml  generate_line_chart.yaml  generate_liquid_chart.yaml  generate_mind_map.yaml  generate_network_graph.yaml  (+11 more)
go-plugin/: README.md  go.mod  mcpassert.go
jest-plugin/: README.md  package-lock.json  package.json
phpunit-plugin/: README.md  composer.json
pypi/: README.md  pyproject.toml
pypi/mcp_assert/: __init__.py  __main__.py
pytest-plugin/: README.md  pyproject.toml
pytest-plugin/pytest_mcp_assert/: __init__.py  plugin.py
pytest-plugin/pytest_mcp_assert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: download-stats.sh  npm-publish.sh  pypi-build-wheels.sh  pypi-publish.sh
snap/: snapcraft.yaml
vitest-plugin/: README.md  package-lock.json  package.json
(+630 files in other folders)
