[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-assert"
version = "0.2.0"
description = "Deterministic correctness testing for MCP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["mcp", "testing", "assertions", "eval", "model-context-protocol", "mcp-server", "ai-agents", "fuzz-testing", "schema-validation", "ci", "regression-testing", "quality-assurance", "linting", "mcp-testing", "deterministic-testing", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/blackwell-systems/mcp-assert"
Documentation = "https://blackwell-systems.github.io/mcp-assert"
Repository = "https://github.com/blackwell-systems/mcp-assert"

[project.scripts]
mcp-assert = "mcp_assert.__main__:main"

[tool.setuptools.packages.find]
include = ["mcp_assert*"]

[tool.setuptools.package-data]
mcp_assert = ["bin/*"]
